--- a/install/0000_80_machine-config_04_deployment.yaml
+++ b/install/0000_80_machine-config_04_deployment.yaml
@@ -38,6 +38,8 @@ spec:
         env:
           - name: RELEASE_VERSION
             value: "0.0.1-snapshot"
+          - name: OPERATOR_IMAGE
+            value: placeholder.url.oc.will.replace.this.org/placeholdernamespace:machine-config-operator
         terminationMessagePolicy: FallbackToLogsOnError
         volumeMounts:
         - name: images
